objects/Jixi_Integration_Tokens__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Jixi Service Integration Token variables</description>
    <fields>
        <fullName>Client_Certification_Name__c</fullName>
        <description>Set Client Certification name to be used to authorize at Jixi Service.</description>
        <label>Client Certification Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <description>Http Method to be used in Jixi Integration</description>
        <label>HTTP Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Endpoint__c</fullName>
        <description>Jixi Service End point</description>
        <label>Service Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout for callout. Max 120,000</description>
        <label>Timeout (Millis)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Jixi Integration Tokens</label>
</CustomObject>